Made UI norwegian

--- a/StorhaugenWebsite/Components/NotificationBell.razor
+++ b/StorhaugenWebsite/Components/NotificationBell.razor
@@ -12,7 +12,7 @@
           Class="notification-badge">
     <MudMenu Icon="@Icons.Material.Rounded.Notifications"
              Color="Color.Inherit"
-             Size="Size.Small"
+             Size="Size.Medium"
              AnchorOrigin="Origin.BottomRight"
              TransformOrigin="Origin.TopRight"
              Dense="true">
